--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^5.5.0",
+    "mongoose": "^7.2.2",
     "swagger-ui-express": "^4.6.3",
     "validatorjs": "^3.22.1"
   },
