--- a/package.json
+++ b/package.json
@@ -15,10 +15,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3",
+    "connect-mongo": "^5.0.0",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
-    "mongodb": "^5.5.0",
+    "express-handlebars": "^7.0.7",
+    "express-session": "^1.17.3",
+    "method-override": "^3.0.0",
+    "moment": "^2.29.4",
+    "mongodb": "^5.6.0",
     "mongoose": "^7.2.2",
+    "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "swagger-ui-express": "^4.6.3",
     "validatorjs": "^3.22.1"
   },
