--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "agrichems",
   "version": "1.0.0",
-  "description": "",
+  "description": "pesticides",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,9 +12,10 @@
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Innocent",
+  "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "connect-mongo": "^5.0.0",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
