--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "connect-mongo": "^5.0.0",
-    "dotenv": "^16.1.4",
+    "dotenv": "^16.2.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
@@ -25,11 +25,12 @@
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
     "mongodb": "^5.6.0",
-    "mongoose": "^7.2.3",
+    "mongoose": "^7.3.0",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
+    "session": "^0.1.0",
     "sha1": "^1.1.1",
     "swagger-ui-express": "^4.6.3",
     "validatorjs": "^3.22.1"
@@ -40,6 +41,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
-    "swagger-autogen": "^2.23.1"
+    "swagger-autogen": "^2.23.2"
   }
 }
